--- a/styles/myBootstrap.css
+++ b/styles/myBootstrap.css
@@ -12,8 +12,8 @@
  *   box-shadow : 0px 0px 10px black !important;
  * }
 */
-test {
-  box-shadow: 0px 0px 10px black !important;
+.navbar-collapse {
+  background: #000000;
 }
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
