--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,10 @@ opacity: .9;
     width: 100%; 
 }
 
+#podSection{
+    margin-top: 80px;
+}
+
 .fill { 
     min-height: 100%;
     height: 100%;
