--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,18 @@ opacity: .9;
 }
 
 #podSection{
-    margin-top: 80px;
+    margin-top: 70px;
+}
+
+.podImage{
+    width: 100%;
+    height: 100px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.podImage:hover{
+    opacity: .7;
 }
 
 .fill { 
