--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,11 @@ opacity: .9;
     margin-top: 70px;
 }
 
+#map{
+    height: 100%;
+    width: 100%;  
+}
+
 .podImage{
     width: 100%;
     height: 150px;
