--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,10 @@ opacity: .9;
     width: 100%;  
 }
 
+#courthouseImage{
+    text-align: center;
+}
+
 .podImage{
     width: 100%;
     height: 150px;
