--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,10 @@ h4, h5{
         height: 90%;
 }
 
+#aboutImg{
+    padding-bottom: 20px;
+}
+
 #map{
     margin-top: 40px;
     padding-top: 40px;
@@ -140,7 +144,7 @@ h4, h5{
 
 #title{
 text-align: center;
-transform: translateY(35%);
+transform: translateY(32%);
 }
 
 #myPanoViewer{
@@ -148,6 +152,27 @@ transform: translateY(35%);
     cursor: move;
 }
 
+#podSection{
+    margin-top: 70px;
+    height: 99%;
+    overflow: auto;
+}
+
+#podSection::-webkit-scrollbar { 
+    width: 0px; 
+}
+
+.podImage{
+    width: 100%;
+    height: 150px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    overflow: auto;
+}
+
+.podImage:hover{
+    opacity: .7;
+}
 
 .fill { 
     min-height: 100%;
